Version 1.3.3
-------------
Fixed: lumps with non-integer representable rotations are no longer loaded as sprites. Thanks to Kain D.
Changed: improve detection for invalid graphics.

Version 1.3.2
-------------
Fixed: [CODEPTR] frame definitions were not always correctly read from patches. Thanks to Gregor.
Fixed: Sound loading was broken, and was not 1-based. Thanks to MTrop.

Version 1.3.1
-------------
Fixed: writing actions/code pointers for vanilla-styles patches. Thanks to Asht Mslf.

Version 1.3.0
-------------
Added: DeHackEd Extended (DEHEXTRA) configuration with extra states, sounds, things and sprites.
Added: support for DEHEXTRA thing fields: Gib health, Dropped item, Pickup width, Projectile pass height and Fullbright.
Added: Doom Retro thing fields: Blood, Shadow offset, Retro Bits, Name and Plural.
Added: state preview now uses a state's unused 1 and 2 parameters as offsets if previewing a state from the weapons editor (right-click state label).
Added: better Linux compatibility. The application starts and is somewhat usable, but a number of UI issues still prevent it from working well.
Added: IWAD detection for chex.wad and chex3.wad (official version). Thanks to Acts19quiz.
Changed: engine table files can now include (base table) files. This leads to smaller filesizes and makes for easier updating. As a result of this, strings in the Doom 1.9 and Ultimate Doom 1.9 tables are now keyed by their index.
Changed: engine table files list only fields used by that engine to reduce their size and improve maintainability. Default entries for things, states, weapons, ammo and sounds are provided for tables that extend existing ones.
Changed: string editing for vanilla patches will allow any number of characters to be entered, but disallow using the new string if it is too long.
Changed: thing editor properties, states, sounds and flags are now tabbed to save on screen real estate. Especially useful if an engine has many thing properties.