@@ -1,0 +1,3 @@
+wxPython~=4.2.4
+sounddevice~=0.5.3
+cx_Freeze~=8.4.1
